--- a/LECTURE4.Rmd
+++ b/LECTURE4.Rmd
@@ -23,7 +23,7 @@ If vital rates become less favorable to growth as population density increases, 
 
 ## Regulation!
 
-First of all, we have already established that positive feedbacks are not sustainable, because increases mean faster increases, mean faster increases, etc. (a vicious circle). Density dependence is a kind of feedback, but it is NOT a positive feedback. Instead, it is a *negative feedback*! Which is also known as a *stabilizing feedback*. As we discussed before, negative feedbacks are essential for well-regulated systems. Recall the example of homeostasis in organismal biology. If blood sugar goes up, the body will work to lower it, and vice versa. 
+First of all, we have already established that positive feedbacks are not sustainable, because increases mean faster increases, mean faster increases, etc. (i.e., the vicious circle of exponential growth). Density dependence is a kind of feedback, but it is NOT a positive feedback. Instead, it is a *negative feedback*! Which is also known as a *stabilizing feedback*. As we discussed before, negative feedbacks are essential for well-regulated systems. Recall the example of homeostasis in organismal biology. If blood sugar goes up, the body will work to lower it, and vice versa. 
 
 Same with populations. In a regulated population, an increase in abundance will cause a decrease in the population growth rate, and a decrease in abundance will cause an increase in the population growth rate (*compensatory growth*). 
 
